<resources>
    <string name="app_name">Calculator</string>
    <string name="btn_0">0</string>
    <string name="btn_1">1</string>
    <string name="btn_2">2</string>
    <string name="btn_3">3</string>
    <string name="btn_4">4</string>
    <string name="btn_5">5</string>
    <string name="btn_6">6</string>
    <string name="btn_7">7</string>
    <string name="btn_8">8</string>
    <string name="btn_9">9</string>
    <string name="btn_add">+</string>
    <string name="btn_substract">-</string>
    <string name="btn_multiply">x</string>
    <string name="btn_divide">/</string>
    <string name="btn_decimal">.</string>
    <string name="btn_solve">=</string>
    <string name="textview">=</string>
    <string name="zero_hint">0</string>
</resources>
