<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.juangabriel.calculator.MainActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned|numberDecimal"
        android:ems="10"
        android:id="@+id/editText"
        android:textAlignment="center"
        android:textSize="18sp"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/zero_hint"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        tools:layout_editor_absoluteY="16dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberSigned|numberDecimal"
        android:ems="10"
        android:id="@+id/editText2"
        app:layout_constraintRight_toRightOf="@+id/editText"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:hint="@string/zero_hint"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="@+id/editText" />

    <TextView
        android:text="@string/textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        app:layout_constraintBaseline_toBaselineOf="@+id/editText2"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintRight_toLeftOf="@+id/editText2"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp" />

    <Button
        android:text="@string/btn_0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button0"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/button1"
        app:layout_constraintLeft_toLeftOf="@+id/button1"
        android:minHeight="48dp"
        android:minWidth="48dip" />

    <Button
        android:text="@string/btn_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button1"
        android:minHeight="48dp"
        android:minWidth="48dip"
        app:layout_constraintLeft_toLeftOf="@+id/button4"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:text="@string/btn_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button2"
        app:layout_constraintBaseline_toBaselineOf="@+id/button1"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toRightOf="@+id/button1"
        android:layout_marginLeft="16dp"
        android:minHeight="48dp"
        android:minWidth="48dip" />

    <Button
        android:text="@string/btn_3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button3"
        app:layout_constraintBaseline_toBaselineOf="@+id/button2"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toRightOf="@+id/button2"
        android:layout_marginLeft="16dp"
        android:minHeight="48dp"
        android:minWidth="48dip" />

    <Button
        android:text="@string/btn_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button4"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/button7"
        app:layout_constraintLeft_toLeftOf="@+id/button7"
        android:minHeight="48dp"
        android:minWidth="48dip" />

    <Button
        android:text="@string/btn_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button5"
        android:minHeight="48dp"
        android:minWidth="48dip"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toRightOf="@+id/button4"
        android:layout_marginLeft="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button4" />

    <Button
        android:text="@string/btn_6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button6"
        android:minHeight="48dp"
        android:minWidth="48dip"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toRightOf="@+id/button5"
        android:layout_marginLeft="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button5" />

    <Button
        android:text="@string/btn_7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button7"
        android:minHeight="48dp"
        android:minWidth="48dip"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/editText2"
        app:layout_constraintLeft_toLeftOf="@+id/editText2" />

    <Button
        android:text="@string/btn_8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button8"
        android:minHeight="48dp"
        android:minWidth="48dip"
        app:layout_constraintBaseline_toBaselineOf="@+id/button7"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toRightOf="@+id/button7"
        android:layout_marginLeft="16dp" />

    <Button
        android:text="@string/btn_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button9"
        android:minHeight="48dp"
        android:minWidth="48dip"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toRightOf="@+id/button8"
        android:layout_marginLeft="16dp"
        app:layout_constraintBaseline_toBaselineOf="@+id/button8" />

    <Button
        android:text="@string/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonAdd"
        android:minWidth="48dip"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonEqual"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toRightOf="@+id/buttonEqual"
        android:layout_marginLeft="16dp" />

    <Button
        android:text="@string/btn_substract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonSubstract"
        android:minHeight="48dp"
        android:minWidth="48dip"
        app:layout_constraintBaseline_toBaselineOf="@+id/button3"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toRightOf="@+id/button3"
        android:layout_marginLeft="16dp" />

    <Button
        android:text="@string/btn_multiply"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonMultiply"
        app:layout_constraintBaseline_toBaselineOf="@+id/button6"
        app:layout_constraintLeft_toRightOf="@+id/button6"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:minHeight="48dp"
        android:minWidth="48dip" />

    <Button
        android:text="@string/btn_divide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonDivide"
        app:layout_constraintBaseline_toBaselineOf="@+id/button9"
        app:layout_constraintLeft_toRightOf="@+id/button9"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:minHeight="48dp"
        android:minWidth="48dip" />

    <Button
        android:text="@string/btn_decimal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonDecimal"
        app:layout_constraintBaseline_toBaselineOf="@+id/button0"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toRightOf="@+id/button0"
        android:layout_marginLeft="16dp"
        android:minHeight="48dp"
        android:minWidth="48dip" />

    <Button
        android:text="@string/btn_solve"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonEqual"
        android:minHeight="48dp"
        android:minWidth="48dip"
        app:layout_constraintBaseline_toBaselineOf="@+id/buttonDecimal"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toRightOf="@+id/buttonDecimal"
        android:layout_marginLeft="16dp" />

</android.support.constraint.ConstraintLayout>
